--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,109 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body {
+  height: 100%;
+  color: white;
+  background-image: url('./assets/background.jpeg');
+  background-size: cover;
+  background-repeat: repeat;
+}
+
+body {
+  margin: 0;
+   font-family: Roboto, "Helvetica Neue", sans-serif;
+
+
+app-header,
+app-footer {
+  height: 10vh;
+  width: 100%;
+  display: flex;
+  background-color: black;
+}
+
+.main {
+  width: 100%;
+  height: 80%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+
+}
+
+
+app-footer {
+  position: fixed;
+  bottom: 0;
+}
+}
+
+.icon-black {
+  max-width: 30px;
+  max-height: 30px;
+  padding: 0;
+  margin-right: 10px;
+}
+
+.icon {
+  max-width: 50px;
+  max-height: 50px;
+  filter: invert(100%);
+  padding: 0;
+}
+
+
+.page {
+  height: 70vh;
+  width: 90%;
+  margin: 4vh auto;
+}
+
+.modal-title {
+  display: flex;
+  text-align: end;
+  justify-content: center;
+
+  h2 {
+    display: block;
+    text-transform: uppercase;
+    margin: 0;
+  }
+
+  h2::after {
+    content: '';
+    display: block;
+    padding-bottom: 11px;
+    margin-bottom: 10px;
+    width: 81%;
+    border-bottom: 3px solid #673ab7;;
+    transition: all 0.3s ease;
+  }
+
+  h2:hover:after {
+    width: 100%;
+  }
+}
+
+.modal-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .mat-form-field {
+    margin-top: 1em;
+    width: 65%;
+  }
+}
+
+.youtube,
+.kino {
+  background-image: url('./youtube.ico');
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 50px;
+  height: 50px;
+}
+
+.kino {
+  background-image: url('./kinopoisk.ico');;
+}
