--- a/src/app/components/films-list/films-list.component.html
+++ b/src/app/components/films-list/films-list.component.html
@@ -1,3 +1,3 @@
 <div class="cards-container">
-  <app-film-card [film]="film" *ngFor="let film of films;"></app-film-card>
+    <app-film-card [film]="film" *ngFor="let film of films"></app-film-card>
 </div>
