--- a/src/app/components/user-rating/user-rating.component.html
+++ b/src/app/components/user-rating/user-rating.component.html
@@ -1,4 +1,9 @@
-<div class = "user-rating" *ngIf = "feed$ | async as feed">
-  <h1>{{feed.movieRating}}</h1>
+<div class = "user-rating">
+  <ng-component *ngIf = "feed$ | async as feed; else W">
+    <p>1</p>
+  </ng-component>
+  <ng-template #W>
+    <p>2</p>
+  </ng-template>
 
 </div>
