--- a/src/app/components/film-page/film-page.component.html
+++ b/src/app/components/film-page/film-page.component.html
@@ -12,8 +12,7 @@
               [user]="user"
               (update)="onMovieRatingUpdate(film, user, $event)"
               >  </app-movie-rating>
-              <app-user-rating
-              ></app-user-rating>
+                <app-user-rating [userId]="user.id" [filmId]="film.id"></app-user-rating>
            </div>
         </ng-container>
         <ng-template #WithoutUser>
