--- a/src/app/components/catalog-page/catalog-page.component.html
+++ b/src/app/components/catalog-page/catalog-page.component.html
@@ -1,4 +1,5 @@
 <div class = "catalog-page">
+  <app-catalog-filters></app-catalog-filters>
       <ng-container *ngIf = "user$ | async as user">
         <button
         mat-raised-button
