--- a/src/styles.scss
+++ b/src/styles.scss
@@ -107,3 +107,10 @@ app-footer {
 .kino {
   background-image: url('./kinopoisk.ico');;
 }
+
+.catalog-filter .price,
+.catalog-filter .range{
+  margin: 0 1em;
+
+}
+
