--- a/src/app/components/catalog-filter/catalog-filter.component.html
+++ b/src/app/components/catalog-filter/catalog-filter.component.html
@@ -1,5 +1,7 @@
-<ng-template [ngIf]="config.type==='list'" [ngIfElse]="range">
-  <mat-form-field appearance="fill">
+
+
+<ng-template [ngIf]="config.type==='list'">
+  <mat-form-field appearance="fill" color="accent" class="range">
     <mat-label>{{ config.title }}</mat-label>
     <mat-select multiple (selectionChange)="onSelectionChange($event)">
       <mat-option *ngFor="let option of config.options" [value]="option.value">{{ option.text }}</mat-option>
@@ -7,13 +9,14 @@
   </mat-form-field>
 </ng-template>
 
-<ng-template #range>
-  <p>{{ config.title }}</p>
+<!--<ng-template #range>
+  <p>Сортировка по рейтингу</p>
   <mat-form-field appearance="fill" class="price">
-    <input type="number" matInput placeholder="From" min="{options['prices'][0]}" max="{options['prices'][options['prices'].length - 1]}"/>
+    <input type="number" matInput placeholder="От" min="1" max="10"/>
   </mat-form-field>
 
   <mat-form-field appearance="fill" class="price">
-     <input type="number" matInput placeholder="To" min="{options['prices'][0]}" max="{options['prices'][options['prices'].length - 1]}"/>
+     <input type="number" matInput placeholder="До" min="1" max="10"/>
   </mat-form-field>
-</ng-template>
+</ng-template>-->
+
