--- a/src/app/components/film-page/film-page.component.scss
+++ b/src/app/components/film-page/film-page.component.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   position: relative;
   width: 90%;
+  height: 74vh;
   margin: 2em auto;
   background-color: #321011;
 
