--- a/src/app/components/user-information-modal/user-information-modal.component.html
+++ b/src/app/components/user-information-modal/user-information-modal.component.html
@@ -17,12 +17,12 @@
       <mat-hint>Включая код страны</mat-hint>
     </mat-form-field>
 
-    <mat-form-field>
+    <!--<mat-form-field>
       <mat-label>Выберите дату рождения</mat-label>
       <input matInput [matDatepicker]="picker" formControlName="birthday" />
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
-    </mat-form-field>
+    </mat-form-field>-->
 
     <mat-form-field>
       <mat-label>Аватар</mat-label>
