add user page folder

--- a/src/app/components/film-page/film-page.component.html
+++ b/src/app/components/film-page/film-page.component.html
@@ -12,7 +12,9 @@
               [user]="user"
               (update)="onMovieRatingUpdate(film, user, $event)"
               >  </app-movie-rating>
-                <app-user-rating [userId]="user.id" [filmId]="film.id"></app-user-rating>
+              <div class = "user-rating-container">
+                <p>Ваша оценка </p>
+                <app-user-rating [userId]="user.id" [filmId]="film.id"></app-user-rating></div>
            </div>
         </ng-container>
         <ng-template #WithoutUser>
