--- a/src/app/components/user-rating/user-rating.component.html
+++ b/src/app/components/user-rating/user-rating.component.html
@@ -1,4 +1,6 @@
 <div class = "user-rating" *ngIf="feed">
-  <p>Ваша оценка {{feed.movieRating}}/10</p>
+
+    <span>{{feed.movieRating}}</span>
+
 
 </div>
