--- a/src/app/components/user-information-modal/user-information-modal.component.html
+++ b/src/app/components/user-information-modal/user-information-modal.component.html
@@ -40,14 +40,14 @@
 
     <mat-form-field>
       <mat-label>Социальные сети</mat-label>
-        <input type="text" matInput formControlName="socialLink1">
+        <input type="text" matInput formControlName="link">
     </mat-form-field>
 
     <mat-form-field>
     <mat-label>Обо мне</mat-label>
       <textarea
         matInput
-        formControlName="userAbout"
+        formControlName="about"
         cdkTextareaAutosize
         #autosize="cdkTextareaAutosize"
         cdkAutosizeMinRows="1"
