--- a/src/app/components/user-page/user-page.component.scss
+++ b/src/app/components/user-page/user-page.component.scss
@@ -65,7 +65,7 @@
 
   .user-page-body {
     width: 85%;
-    height: 40vh;
+    min-height: 40vh;
     background-color: white;
     margin: 0 auto;
     margin-bottom: 2em;
