--- a/src/app/components/film-page/film-page.component.scss
+++ b/src/app/components/film-page/film-page.component.scss
@@ -25,19 +25,10 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
+    }
 
-      .user-rating-container {
-        display: flex;
-        color: white;
-        font-size: 1.2em;
-        margin: 1em auto;
-
-        p {
-          margin-right: 1em;
-        }
-      }
-
-
+    app-movie-rating {
+      margin-bottom: 1em;
     }
   }
 
