--- a/src/app/components/user-rating/user-rating.component.scss
+++ b/src/app/components/user-rating/user-rating.component.scss
@@ -1,1 +1,27 @@
+.user-rating {
+ display:flex;
+ justify-content: center;
+ align-items: center;
+ font-size: 20px;
 
+ .rating-text {
+  display: block;
+  margin: 0 1em 0 0;
+ }
+
+ span {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #673ab7;
+  border-radius: 20px;
+  width: 40px;
+  height: 40px;
+  color: white;
+ }
+
+.hidden {
+  display: none;
+}
+
+}
