--- a/src/app/components/user-text-review/user-text-review.component.scss
+++ b/src/app/components/user-text-review/user-text-review.component.scss
@@ -1,41 +1,53 @@
 .comment-container,
 .comment-form-container {
   margin: 4vh auto;
-  padding: 2% 2%;
-  width: 90%;
+  width: 45%;
   border: 2px solid black;
   background-color: black;
   display: flex;
   flex-wrap: wrap;
 
-
-
-  .image-title-container{
-    width: 200px;
+  .comment-header {
     display: flex;
-    flex-direction: column;
+    padding: 2% 2% 2% 2%;
+    width: 100%;
+    border-bottom: white 2px solid;
+
+  .image-title-container,
+  .date-container{
+    display: flex;
+    width: 50%;
+    justify-content: space-between;
 
 
-    .comment-img {
-      width: 200px;
-      height:200px;
+    img {
+      width: 5em;
+      height: 5em;
+      border-radius: 100px;
+      box-shadow: 0 0 0 3px white, 0 0 13px white;
+
     }
 
     .comment-title {
       text-align: center;
-      font-family: var(--Risque);
-      font-size: 32px;
-      color: var(--lime);
+      margin: 1em 0;
+      font-size: 1.5em;
     }
   }
 
+  .date-container {
+    display: inline-block;
+    text-align: end;
+    width: 50%;
+  }
+}
+
   .comment-text {
-    width: 89%;
-    padding-left: 2%;
+    width: 100;
+    padding: 2% 2%;
 
     p {
-      font-family: var(--Josefin);
-      font-size: 30px;
+      font-size: 1.3em;
       text-align: justify;
     }
 
