--- a/src/app/components/film-page/film-page.component.scss
+++ b/src/app/components/film-page/film-page.component.scss
@@ -3,7 +3,6 @@
   flex-direction: column;
   position: relative;
   width: 90%;
-  height: 100vh;
   margin: 2em auto;
   background-color: #321011;
 
@@ -89,5 +88,9 @@
     }
 
 
+  }
+  .review-form-button {
+    width: 20%;
+    margin: 0 auto;
   }
 }
