--- a/src/app/components/user-page/user-page.component.html
+++ b/src/app/components/user-page/user-page.component.html
@@ -49,9 +49,10 @@
     <div class="user-page-button">
       <button (click)="activePage = 'score'">Оценки</button>
       <button (click)="activePage = 'veto'" class="purple">Заблокировано</button>
-      <button class="yellow">Отзывы</button>
+      <button (click)="activePage = 'review'" class="yellow">Отзывы</button>
     </div>
-    <div class="user-page-body" *ngIf="activePage === 'score'"><app-viewing-collection [user]="user"></app-viewing-collection></div>
+    <div class="user-page-body viewing-page" *ngIf="activePage === 'score'"><app-viewing-collection [user]="user"></app-viewing-collection></div>
     <div class="user-page-body veto-page" *ngIf="activePage === 'veto'"><app-veto-collection [user]="user" [ngClass]="'active'"></app-veto-collection></div>
+    <div class="user-page-body" *ngIf="activePage === 'review'"><app-film-text-review [user]="user" [ngClass]="'active'"></app-film-text-review></div>
   </ng-container>
 </div>
