--- a/src/app/components/user-page/user-page.component.scss
+++ b/src/app/components/user-page/user-page.component.scss
@@ -49,7 +49,7 @@
     }
 
     .yellow {
-      background-color: yellow;
+      background-color: #FFCC00;
     }
 
     .purple {
@@ -66,7 +66,7 @@
   .user-page-body {
     width: 85%;
     min-height: 40vh;
-    background-color: white;
+    background-color: #FFCC00;
     margin: 0 auto;
     margin-bottom: 2em;
     border-bottom-left-radius: 20px;
@@ -80,9 +80,9 @@
       color: white;
     }
 
-  .user-page-body .active {
-
-  }
+    .user-page-body.viewing-page {
+      background-color: white;
+    }
 
 
 }
